--- a/QLNS/QLNS/QLNS/frmDangKy.resx
+++ b/QLNS/QLNS/QLNS/frmDangKy.resx
@@ -124,8 +124,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACK
-        DgAAAk1TRnQBSQFMAgEBAgEAAQgBAAEIAQABKAEAASgBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACA
+        DgAAAk1TRnQBSQFMAgEBAgEAARABAAEQAQABKAEAASgBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABoAMAASgDAAEBAQABCAYAARkYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -153,41 +153,40 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8AbQAB/wHzAu4B8gH/
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8AbQAB/wHzArwB8gH/
         mQAB/wHwAZMBlAEWAW8BvAH/mAAB9AGTAZoBlAF1ARYBTAHzfgAB/wH0FwAB/wEaARYBlAEWAuMBTQGT
-        Af8UAAH/ARoB9GQAAf8B9AJwAf8WAAH/AZMCFgLjAU0BRwFGAf8UAAEaAUYBGmMAAf8BCARwAf8VAAH1
-        AZMBFgHjAhcCRwFGAf8TAAH/AUwBRgHzYgAB/wGdBXABcQH/FAAB9QGTAW8BFwJGAiYBJQH/EwABkwEl
+        Af8UAAH/ARoB9GQAAf8B9AJwAf8WAAH/AZMCFgLjAU0BRwFGAf8UAAEaAUYBGmMAAf8BCARwAf8VAAH/
+        AZMBFgHjAhcCRwFGAf8TAAH/AUwBRgHzYgAB/wGdBXABcQH/FAAB/wGTAW8BFwJGAiYBJQH/EwABkwEl
         AXQB/2EAAf8IcAGQAf8TAAH/AZMDRgIlASYBJQH/EgAB8gEgASUBB2EAAf8KcAEIEwAB/wEaAkYEIAEl
-        AfARAAH1AW8BJgFGAfNfAAH/AfQMcAH0EwAB9AFvBiABRgH0DwAB/wGTAUYBJQGTAf9eAAH/AfAOcAH/
-        EgAB/wGTByABkwH/DQAB/wHyAUYBJgElAfNeAAH/AbsQcAH/EgAB9AFGBiABRgEaDQAB9QFvAiUBbwH/
+        AfARAAH/AW8BJgFGAfNfAAH/AfQMcAH0EwAB9AFvBiABRgH0DwAB/wGTAUYBJQGTAf9eAAH/AfAOcAH/
+        EgAB/wGTByABkwH/DQAB/wHyAUYBJgElAfNeAAH/AbsQcAH/EgAB9AFGBiABRgEaDQAB/wFvAiUBbwH/
         XQAB/wlwAXEB/whwAf8SAAEHByABRgH0DAABbwElASYBRgH/XQAB/wlwAQgB/wEAAfQHcAGWAf8SAAFv
-        ByABkwH/CQAB/wGTASUBJgElAQddAAH1CXAB8wH/AgAB/wEIB3ABCAH/EQAB/wFvBiABJQEaCAAB/wHu
-        ASUCJgFvAfVcAAH/CXAB/wUAAf8BnQdwAfQSAAH0AW8GIAFGAfMGAAH/ARoBRgImAUYBGgH/XQAB/wdw
+        ByABkwH/CQAB/wGTASUBJgElAQddAAH/CXAB8wH/AgAB/wEIB3ABCAH/EQAB/wFvBiABJQEaCAAB/wG8
+        ASUCJgFvAf9cAAH/CXAB/wUAAf8BnQdwAfQSAAH0AW8GIAFGAfMGAAH/ARoBRgImAUYBGgH/XQAB/wdw
         Af8HAAH/CHAB/xEAAf8B8wFGBiABRgH0BAAB/wEaAUYDJgGTAf9fAAH0BHABcQH/CQAB/whwAf8SAAHy
         AUYGIAFvAf8DAAHwAiUCJgFGAfRgAAH/AQgCcAG7Af8LAAH/CHAB/xIAAfIBRgYgAZMC/wEaASUCIAIl
-        Ae5iAAH/AZ0B8gH/DQAB9AdwAZ0B/xIAAfMBbwUgAUYCkwUgAZMB/2MAAf8PAAH/AQgHcAEIAf8SAAH0
-        AW8LIAFvAfV1AAH/AZ0HcAH0EgAB/wH0AZMJIAFGAfN3AAH/CHAB/xMAAf8BkwggARoB/3gAAf8IcAH/
-        EQAC/wHuByABbwH1egAB/whwAf8PAAH/AfMBbwggAUYBBwH/egAB9AdwAZ0B/w0AAfUBkwFGCiABRgGT
+        AbxiAAH/AZ0B8gH/DQAB9AdwAZ0B/xIAAfMBbwUgAUYCkwUgAZMB/2MAAf8PAAH/AQgHcAEIAf8SAAH0
+        AW8LIAFvAf91AAH/AZ0HcAH0EgAB/wH0AZMJIAFGAfN3AAH/CHAB/xMAAf8BkwggARoB/3gAAf8IcAH/
+        EQAC/wG8ByABbwH/egAB/whwAf8PAAH/AfMBbwggAUYBBwH/egAB9AdwAZ0B/w0AAf8BkwFGCiABRgGT
         Af96AAG8B3ABCAH/CgAB/wEaAW8BRgElBiABRgUgAW8B/3kAAf8BlgdwAfQJAAH0AXQBRgImAyUDIAGT
         Af8BvAUgAW8B9HkAAf8HcAHyBgAB/wH0ARoBTANHAiYEJQGTAfQCAAHzAW8BJQEgAkYBbwHzAf94AAH/
         BXAC/wQAAf8B9AEaAW8C4wEXAU0CRwMmASUBkwH0BAAB9AGTBEYBbwEaAf94AAH/A3AB/wUAAf8BGgGT
-        ApQBdQLjAk0CRwEmAUYBkwH/BgAB/wHyAW8DRgFMAZMB9HgAAfQBkAH/BQAB7gGTAZQBmgOUARYC4wEX
-        AU0BRwFGARoB/wgAAf8B9QEHAUYBFwNvAfAB/3cAAf8GAAS9AZoClAIWAuMBFwFvAfMB/wsAAf8B9AFv
-        AUYCFgFvAZMB/30AAZMBBwO9A5QCFgHjAZMB9A8AAf8BvAJvAhYBbwEaAfUB/3oAAfQBGgEHA70ClAEW
-        AZMBGgH/EgAB/wEaA5MBdAGTARoB9AH/eQAB/wHzAe4BkwGUApMBGgH0FQAB/wH1AfIBBwGTA28B9XoA
-        Av8D9AH1Af8YAAL/AfUD9AH/8AABQgFNAT4HAAE+AwABKAMAAaADAAEoAwABAQEAAQEFAAEgAQMWAAP/
-        AQAK/woACv8KAAX/AeABfwP/CgAF/wHAAT8D/woABf8BwAE/A/8KAAL/AT8C/wGAAR8B/wH+AT8KAAH/
-        AfwBHwL/AYABHwH/Af4BPwoAAf8B+AEPAv8BgAEfAf8B/AE/CgAB/wHwAQcC/wGAAR8B/wH8AT8KAAH/
-        AeABAwL/AYABHwH/AfgBfwoAAf8BwAEDAv8BgAEfAf8B8AF/CgAB/wEAAQEC/wHAAQ8B/wHgAX8KAAH+
-        AgAC/wHAAQcB/wHAAf8KAAH8AgABfwH/AeABBwH/AcAB/woAAfgCAAE/Af8B8AEDAf8BwQH/CgAB8AEA
-        AYABHwH/AfgBAQH/AQMB/woAAeABAQGAAQ8B/wH4AQEB/gEDAf8KAAHAAQcBwAEPAf8B/AEAAfwBAwH/
-        CgAB4AEPAeABBwH/AfwBAAF4AQcB/woAAfABHwHwAQMC/wEAATgBDwH/CgAB8AE/AfgBAQL/AYABAAEf
-        Af8KAAH4AX8B/AEAAv8BwAEAAR8B/woAAf0B/wH8AQABfwH/AeABAAE/Af8KAAL/Af4BAAF/Af8B4AEA
-        AX8B/woAA/8BAAE/Af8B+AEAAX8B/woAA/8BgAEfAf8B8AEAAv8KAAP/AcABDwH/AeABAAF/Af8KAAP/
-        AeABBwH/AcABAAE/Af8KAAP/AfABAwH/AgABHwH/CgAD/wHwAQMB/gIAAQ8B/woAA/8B+AEDAfABAAEY
-        AQMB/woAA/8B/AEDAcABAAE8AQEB/woAA/8B/gEPAYABAAF+AQAB/woABP8BHwIAAf8BAAE/CgAE/wG/
-        AQABAQH/AcABHwoABf8BAAEHAf8B8AEDCgAF/wEAAQ8B/wH8CwAF/wGAAT8B/wH+CwAF/wHAAX8C/wGA
-        CgAK/woACw==
+        ApQBdQLjAk0CRwEmAUYBkwH/BgAB/wHyAW8DRgFMAZMB9HgAAfQBkAH/BQABvAGTAZQBmgOUARYC4wEX
+        AU0BRwFGARoB/wgAAv8BBwFGARcDbwHwAf93AAH/BgAEvQGaApQCFgLjARcBbwHzAf8LAAH/AfQBbwFG
+        AhYBbwGTAf99AAGTAQcDvQOUAhYB4wGTAfQPAAH/AbwCbwIWAW8BGgL/egAB9AEaAQcDvQKUARYBkwEa
+        Af8SAAH/ARoDkwF0AZMBGgH0Af95AAH/AfMBvAGTAZQCkwEaAfQVAAL/AfIBBwGTA28B/3oAAv8D9AL/
+        GAAD/wP0Af/wAAFCAU0BPgcAAT4DAAEoAwABoAMAASgDAAEBAQABAQUAASABAxYAA/8BAAr/CgAK/woA
+        Bf8B4AF/A/8KAAX/AcABPwP/CgAF/wHAAT8D/woAAv8BPwL/AYABHwH/Af4BPwoAAf8B/AEfAv8BgAEf
+        Af8B/gE/CgAB/wH4AQ8C/wGAAR8B/wH8AT8KAAH/AfABBwL/AYABHwH/AfwBPwoAAf8B4AEDAv8BgAEf
+        Af8B+AF/CgAB/wHAAQMC/wGAAR8B/wHwAX8KAAH/AQABAQL/AcABDwH/AeABfwoAAf4CAAL/AcABBwH/
+        AcAB/woAAfwCAAF/Af8B4AEHAf8BwAH/CgAB+AIAAT8B/wHwAQMB/wHBAf8KAAHwAQABgAEfAf8B+AEB
+        Af8BAwH/CgAB4AEBAYABDwH/AfgBAQH+AQMB/woAAcABBwHAAQ8B/wH8AQAB/AEDAf8KAAHgAQ8B4AEH
+        Af8B/AEAAXgBBwH/CgAB8AEfAfABAwL/AQABOAEPAf8KAAHwAT8B+AEBAv8BgAEAAR8B/woAAfgBfwH8
+        AQAC/wHAAQABHwH/CgAB/QH/AfwBAAF/Af8B4AEAAT8B/woAAv8B/gEAAX8B/wHgAQABfwH/CgAD/wEA
+        AT8B/wH4AQABfwH/CgAD/wGAAR8B/wHwAQAC/woAA/8BwAEPAf8B4AEAAX8B/woAA/8B4AEHAf8BwAEA
+        AT8B/woAA/8B8AEDAf8CAAEfAf8KAAP/AfABAwH+AgABDwH/CgAD/wH4AQMB8AEAARgBAwH/CgAD/wH8
+        AQMBwAEAATwBAQH/CgAD/wH+AQ8BgAEAAX4BAAH/CgAE/wEfAgAB/wEAAT8KAAT/Ab8BAAEBAf8BwAEf
+        CgAF/wEAAQcB/wHwAQMKAAX/AQABDwH/AfwLAAX/AYABPwH/Af4LAAX/AcABfwL/AYAKAAr/CgAL
 </value>
   </data>
 </root>
